[package]
name = "conv2jxl"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
anstyle = "1.0.11"
rand = "0.9.2"
ctrlc = "3.4.7"
arc-swap = "1.7.1"
foldhash = "0.2.0"
regex = "1.11.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
