[package]
name = "conv2jxl"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
rand = "0.9.2"
foldhash = "0.2.0"
regex = "1.11.2"
crossbeam-queue = "0.3.12"
imagesize = "0.14.0"
notify = "8.2.0"

color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
# throbber-widgets-tui = "0.8.0"

tempfile = "3"
scc = "3.0.4"

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["tiff", "tga", "qoi", "png", "bmp"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
